--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="particles-js"></div>
     <div class="padding"></div>
     <!-- profile picture -->
-    <!-- add a picture of yourself or an avatar, best to use a 128x128px one -->
+    <!-- add a picture of yourself or an avatar, best to use a 256x256px one -->
     <img src="images/platzhalter_256px.jpg" alt="profile picture" class="profile-picture">
 
     <!-- profile-name -->
@@ -35,28 +35,28 @@
 
     <!-- link section -->
     <!-- add your own website link -->
-    <a href="#" class="links">My Website</a>
+    <a href="#" class="links"><i class="fas fa-desktop">&nbspMy Website</i></a>
 
     <!-- add your instagram account -->
-    <a href="#" class="links">Instagram</a>
+    <a href="#" class="links"><i class="fab fa-instagram">&nbspInstagram</i></a>
 
     <!-- add your youtube channel -->
-    <a href="#" class="links">YouTube</a>
+    <a href="#" class="links"><i class="fab fa-youtube">&nbspYouTube</i></a>
 
     <!-- add your tiktok account -->
-    <a href="#" class="links">TikTok</a>
+    <a href="#" class="links"><i class="fab fa-tiktok">&nbspTikTok</i></a>
 
     <!-- add your spotify account -->
-    <a href="#" class="links">Spotify</a>
+    <a href="#" class="links"><i class="fab fa-spotify">&nbspSpotify</i></a>
 
     <!-- add your github account -->
-    <a href="#" class="links">Github</a>
+    <a href="#" class="links"><i class="fab fa-github">&nbspGithub</i></a>
 
     <!-- add your twitter account -->
-    <a href="#" class="links">Twitter</a>
+    <a href="#" class="links"><i class="fab fa-twitter">&nbspTwitter</i></a>
 
     <!-- add your linkedin account -->
-    <a href="#" class="links">LinkedIn</a>
+    <a href="#" class="links"><i class="fab fa-linkedin">&nbspLinkedIn</i></a>
 
 
     <!-- logo button -->
