--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
 
     <!-- link section -->
     <!-- add your own website link -->
-    <a href="#" class="links"><i class="fas fa-desktop">&nbspMy Website</i></a>
+    <a href="#" class="links"><i class="fas fa-desktop"></i>&nbspMy Website</a>
 
     <!-- add your instagram account -->
-    <a href="#" class="links"><i class="fab fa-instagram">&nbspInstagram</i></a>
+    <a href="#" class="links"><i class="fab fa-instagram"></i>&nbspInstagram</a>
 
     <!-- add your youtube channel -->
-    <a href="#" class="links"><i class="fab fa-youtube">&nbspYouTube</i></a>
+    <a href="#" class="links"><i class="fab fa-youtube"></i>&nbspYouTube</a>
 
     <!-- add your tiktok account -->
-    <a href="#" class="links"><i class="fab fa-tiktok">&nbspTikTok</i></a>
+    <a href="#" class="links"><i class="fab fa-tiktok"></i>&nbspTikTok</a>
 
     <!-- add your spotify account -->
-    <a href="#" class="links"><i class="fab fa-spotify">&nbspSpotify</i></a>
+    <a href="#" class="links"><i class="fab fa-spotify"></i>&nbspSpotify</a>
 
     <!-- add your github account -->
-    <a href="#" class="links"><i class="fab fa-github">&nbspGithub</i></a>
+    <a href="#" class="links"><i class="fab fa-github"></i>&nbspGithub</a>
 
     <!-- add your twitter account -->
-    <a href="#" class="links"><i class="fab fa-twitter">&nbspTwitter</i></a>
+    <a href="#" class="links"><i class="fab fa-twitter"></i>&nbspTwitter</a>
 
     <!-- add your linkedin account -->
-    <a href="#" class="links"><i class="fab fa-linkedin">&nbspLinkedIn</i></a>
+    <a href="#" class="links"><i class="fab fa-linkedin"></i>&nbspLinkedIn</a>
 
 
     <!-- logo button -->
